CSS样式重建 增加运行和启用

--- a/main/resource/index.html
+++ b/main/resource/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>V2rayPool - 科技代理池管理</title>
+  <title>V2rayPool</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="/static/layui/css/layui.css" rel="stylesheet">
   <script src="/static/layui/layui.js"></script>
@@ -266,7 +266,7 @@
       <h1 class="text-3xl font-bold bg-gradient-to-r from-cyber-purple via-neon-purple to-cyber-red bg-clip-text text-transparent">
         V2rayPool
       </h1>
-      <p class="text-gray-400 text-sm">科技代理池管理系统</p>
+      <p class="text-gray-400 text-sm">启用是设置系统代理就像v2ray，运行只是打开端口 </p>
     </div>
 
     <!-- 主内容区域 - 占满剩余空间 -->
